--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ body {
     background-color: #f0f2f5;
     font-family: 'Poppins', sans-serif;
 }
+/*Config para leitores de tela apenas.*/
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border-width: 0;
+}
 
 .container{
     width: min(90vw, 800px);   
@@ -65,6 +77,9 @@ font-weight: 100;
 .card h3{
 font-weight: normal;
 font-size: 1rem;
+
+display: flex;
+align-items: center;
 }
 
 .card p{
