--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 } 
 
+html{
+    font-size: 93.75%;
+}    
+
 body {
     background-color: #f0f2f5;
     font-family: 'Poppins', sans-serif;
@@ -31,12 +35,30 @@ body {
     width: min(90vw, 800px);   
     margin: auto;
 }
+
+
+
 /* Titles --------------------------------- */
 h2{
     margin-top: 3.2rem;
     margin-bottom: 0.8rem;
     color:var(--dark-blue);
     font-weight: normal;
+}
+/* Links and Buttons --------------------------------- */
+
+a{
+    color: #49aa26;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #3dd705;
+}
+
+.button.new{
+    display: inline-block;
+    margin-bottom: .8rem;
 }
 
 /* Header --------------------------------- */
@@ -106,6 +128,11 @@ table tbody tr td:first-child
 border-radius: 0.25rem 0 0 0.25rem;
 }
 
+table thead tr th:last-child,
+table tbody tr td:last-child{
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
 table th{
     background: white;
     
@@ -147,4 +174,16 @@ footer{
     color: var(--dark-blue);
 
     opacity: 0.6;
+}
+
+/* Responsive --------------------------------- */
+@media (min-width:800px){
+    html{
+font-size: 87.5%;
+    }
+    #balance{
+        display:grid;
+        grid-template-columns:repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
