--- a/style.css
+++ b/style.css
@@ -116,10 +116,18 @@ background: #49AA26 ;
 color: white;
 }
 /* Table --------------------------------- */
+#transaction {
+    display:block;
+    width: 100%;
+    overflow-x: auto;
+}
+
 #data-table{
+    
 width: 100%;
 border-spacing: 0 0.5rem;
 color: #969cb3;
+
 }
 
 table thead tr th:first-child,
