--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 
 :root{
     --dark-blue: #363f5f;
+    --green: #49AA26;
+    --light-green: #3dd705;
+    --red:#e92929;
 }
 
 *{
@@ -48,17 +51,51 @@ h2{
 /* Links and Buttons --------------------------------- */
 
 a{
-    color: #49aa26;
+    color:var(--green);
     text-decoration: none;
 }
 
 a:hover{
-    color: #3dd705;
+    color: var(--light-green);
+}
+
+button{
+ width:100%;
+ height:50px;
+ border:none;
+ color:white;
+ background: var(--green);
+
+ padding:0;
+
+ border-radius:0.25rem;
+ cursor:pointer;
+}
+
+button:hover{
+    background: var(--light-green);
 }
 
 .button.new{
     display: inline-block;
     margin-bottom: .8rem;
+}
+
+.button.cancel{
+color:var(--red);
+border: 2px var(--red) solid;
+border-radius: 0.25rem;
+height:50px;
+
+display: flex;
+align-items: center;
+justify-content:center;
+
+opacity: 0.6;
+}
+
+.button.cancel:hover{
+    opacity:1;
 }
 
 /* Header --------------------------------- */
@@ -112,7 +149,7 @@ margin-top: 1rem;
 }
 
 .card.total{
-background: #49AA26 ;
+background:var(--green) ;
 color: white;
 }
 /* Table --------------------------------- */
@@ -171,7 +208,7 @@ color: #12a454;
 }
 
 td.expense{
-color: #e92929;
+color: var(--red);
 }
 
 /* Modal --------------------------------- */
@@ -200,10 +237,41 @@ color: #e92929;
 
 .modal{
     background: #f0f2f5;
-    padding: 2.4rem;
-    position:relative;
+    padding: 2.4rem;       
+}
+/* Form --------------------------------- */
 
-      
+#form{
+    max-width: 500px;
+}
+
+#form h2{
+    margin-top: 0;
+}
+
+input{
+border: none;
+border-radius: 0.2rem;
+padding:0.8rem;
+width:100%;
+}
+
+.input-group{
+    margin-top: 0.8rem;
+}
+.input-group small{
+    opacity: 0.4;
+}
+
+.input-group.actions{
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+}
+
+.input-group.actions .button,
+.input-group.actions button{
+width: 48%;
 }
 /* Footer --------------------------------- */
 
